<resources>
  <string name="app_name">САПР проекты</string>
  <string name="app_name_short">САПР</string>
  <string name="startTranslator">Транслятор</string>
  <string name="startNumeric">Численные методы</string>
  <string name="startMath">Матстатистика</string>
  <string name="startMathStat">Математическая статистика</string>
  <string name="startRV2">Двумерные случайные величины</string>
  <string name="startCA">Корреляционный анализ</string>
  <string name="startGraphics">Графика</string>
  <string name="copyright">Created by didim99, 2018 &#8211; 2021</string>
  <string name="valueBar_ratio" translatable="false">%.2f</string>
  <string name="valueBar_percentage" translatable="false">%d%%</string>
  <string name="valueBar_valueFloat" translatable="false">%.1f / %.0f</string>
  <string name="valueBar_valueInteger" translatable="false">%d / %d</string>
  <string name="valueBar_valueFloatUnits" translatable="false">%.2f %s</string>
  <string name="valueBar_valueIntegerUnits" translatable="false">%d %s</string>
  <string name="help">Справка</string>
  <string name="config">Настройки</string>
  <string name="loading">Загрузка…</string>
  <string name="switchType">Сменить тип задачи</string>
  <string name="dialogButtonOk">OK</string>
  <string name="dialogButtonYes">Да</string>
  <string name="dialogButtonNo">Нет</string>
  <string name="dialogButtonSave">Сохранить</string>
  <string name="dialogButtonCancel">Отмена</string>
  <string name="dialogButtonDelete">Удалить</string>
  <string name="buttonStart">Старт</string>
  <string name="buttonTest">Тест</string>
  <string name="buttonCreate">Создать</string>
  <string name="buttonAdd">Добавить</string>
  <string name="buttonRefresh">Обновить</string>
  <string name="buttonOpen">Открыть</string>
  <string name="buttonLoad">Загрузить</string>
  <string name="buttonSave">Сохранить</string>
  <string name="buttonMore">Дополнительно</string>
  <string name="buttonCalculate">Рассчитать</string>
  <string name="buttonGenerate">Сгенерировать</string>
  <string name="buttonSet">Установить</string>
  <string name="buttonClear">Очистить</string>
  <string name="buttonInit">Инициализировать</string>
  <string name="position">#</string>
  <string name="fieldSizeW">Ширина</string>
  <string name="fieldSizeH">Высота</string>
  <string name="fieldSizeCross">x</string>
  <string name="pathLayout_pickFile">Путь до исходного файла</string>
  <string name="pathLayout_openExplorer">…</string>
  <string name="inputData">Исходные данные</string>
  <string name="outputData">Выходные данные</string>
  <string name="savedToFile">Сохранено в:\n%s</string>
  <string name="loadedFromFile">Загружено из:\n%s</string>
  <string name="cantWriteFile">Не удалось записать файл:\n%s</string>
  <string name="rootUnavailable">На вашем устройстве не получен Root-доступ</string>
  <string name="copiedToClipboard">Скопировано в буфер обмена</string>
  <string name="resourcesUnpacked">Распаковка ресурсов завершена</string>
  <string name="executionTime">Время выполнения: %.3f сек</string>
  <string name="filePicker_emptyPath">Не указаны путь и имя файла</string>
  <string name="filePicker_fileNotExist">Такого файла не существует</string>
  <string name="filePicker_fileIsDir">Файл является каталогом</string>
  <string name="filePicker_fileIsNotDir">Файл не является каталогом</string>
  <string name="filePicker_fileNotReadable">Файл недоступен для чтения</string>
  <string name="filePicker_fileNotWritable">Файл недоступен для записи</string>
  <string name="filePicker_error">Ошибка: %s</string>
  <string name="startLexical">Лексический анализ</string>
  <string name="startSyntax">Синтаксический анализ</string>
  <string name="startSymbol">Таблица символов</string>
  <string name="startFullTranslation">Транслировать</string>
  <string name="translator_symbolSet">Алфавит</string>
  <string name="translator_nothingLoaded">Ничего не загружено</string>
  <string name="translator_saType">Метод синтаксического анализа</string>
  <string-array name="translator_saTypes">
    <item>Рекурсивного спуска</item>
    <item>Операторного предшествования</item>
  </string-array>
  <string name="numeric_transcendentSolver">Трансцендентные уравнения</string>
  <string name="numeric_linearSystemSolver">Система линейных уравнений</string>
  <string name="numeric_interpolator">Интерполирование функций</string>
  <string name="numeric_integrator">Определенный интеграл</string>
  <string name="numeric_diffSolver">Обыкновенные дифф. уравнения</string>
  <string name="numeric_selectType">Выберите задачу</string>
  <string-array name="numeric_taskTypes">
    <item>@string/numeric_transcendentSolver</item>
    <item>@string/numeric_linearSystemSolver</item>
    <item>@string/numeric_interpolator</item>
    <item>@string/numeric_integrator</item>
    <item>@string/numeric_diffSolver</item>
  </string-array>
  <string name="numeric_calcDelta">Delta</string>
  <string name="numeric_setRandom">Random</string>
  <string name="numeric_setTConst">t = const</string>
  <string name="numeric_inputEquation">Исходное уравнение: tg^2(x) - tx = 0</string>
  <string name="numeric_transcendentSolver_typeBinary">Метод половинного деления</string>
  <string name="numeric_transcendentSolver_typeFalsePos">Метод ложного положения</string>
  <string name="numeric_transcendentSolver_typeTangent">Метод Ньютона (касательных)</string>
  <string name="numeric_tIfConst">Значение t: %6.4f</string>
  <string name="numeric_solution">Решение: %9.4f</string>
  <string name="numeric_solveTime">Время решения: %d мкс</string>
  <string name="numeric_solutionSeries">Серия решений:</string>
  <string name="numeric_solutionSteps">Итерации решения</string>
  <string name="numeric_linearSolver_typeLU">Метод LU-разложения</string>
  <string name="numeric_interpolation_newton">Формула Ньютона для неравномерного распределения</string>
  <string name="numeric_integration_trapezium">Метод трапеций</string>
  <string name="numeric_diffSolver_euler">Вторая модификация метода Эйлера</string>
  <string name="errGeneric_cantRead">Не удалось прочитать файл:\n%s</string>
  <string name="errGeneric_cantWrite">Не удалось записать файл:\n%s</string>
  <string name="errGeneric_unsupportedScheme">Не удалось загрузить файл.\nПопробуйте использовать другой файловый менеджер</string>
  <string name="errGeneric_incorrectType">Некорректный формат файла</string>
  <string name="errGeneric_inputFormat">Исходный файл имеет неверный формат</string>
  <string name="errGeneric_inputFileNotReadable">Невозможно прочитать исходный файл</string>
  <string name="errGeneric_cacheUnavailable">Каталог для внешнего кэша недоступен</string>
  <string name="errGeneric_resUnpackFailed">Не удалось распаковать ресурсы</string>
  <string name="errGeneric_emptyValue">Значение не может быть пустым</string>
  <string name="errGeneric_incorrectValue">Некорректное значение</string>
  <string name="errNumeric_nothingToSave">Сохранять нечего</string>
  <string name="errLexical_invalidStatement">Ошибка лексического анализа в строке %d.\n%s</string>
  <string name="errSyntax">Ошибка синтаксического анализа в строке %d.\n%s</string>
  <string name="errSyntaxType">Неизвестный тип синтаксического анализа</string>
  <string name="errMathStat_emptyX">Не заданы значения X</string>
  <string name="errMathStat_emptyF">Не заданы значения M</string>
  <string name="errMathStat_emptyGroup">Группа %d не содержит элементов</string>
  <string name="errMathStat_groupsNotEquals">Количество групп X и M отличается</string>
  <string name="errMathStat_elementsNotEquals">Количество элементов X и M отличается (группа %d)</string>
  <string name="errMathStat_incorrectFmtX">Некорректный формат X (группа %d, значение %d)</string>
  <string name="errMathStat_incorrectFmtF">Некорректный формат M (группа %d, значение %d)</string>
  <string name="errMathStat_negativeF">M должно быть положительным (группа %d, значение %d)</string>
  <string name="errMathStat_emptyGamma">Не задана надежность</string>
  <string name="errMathStat_incorrectGamma">Некорректно задана надежность</string>
  <string name="errMathStat_emptyTotalN">Не задан объем ген. совокупности</string>
  <string name="errMathStat_incorrectTotalN">Некорректно задан объем ген. совокупности</string>
  <string name="errRV_emptyInput">Исходные данные отсутствуют</string>
  <string name="errRV_incorrectFormat">Некорректный формат исходных данных</string>
  <string name="errRV_titleNotDefined">Не задано имя величин</string>
  <string name="errRV_titleIncorrect">Некорректно задоно имя величин</string>
  <string name="errRV_incorrectX">Некорректный формат значения X (i: %d)</string>
  <string name="errRV_incorrectY">Некорректный формат значения Y (j: %d)</string>
  <string name="errRV_incorrectF">Некорректный формат значения m (i: %d, j: %d)</string>
  <string name="errRV_sumOutOfRange">Сумма вероятностей не равна 1</string>
  <string name="errCA_loading">Не удалось загрузить справочные таблицы: %s</string>
  <string name="errCA_emptyY">Не заданы значения Y</string>
  <string name="errCA_elementsNotEquals">Количество элементов X и Y отличается</string>
  <string name="errCA_incorrectFmtX">Некорректный формат X (значение %d)</string>
  <string name="errCA_incorrectFmtY">Некорректный формат Y (значение %d)</string>
  <string name="errCA_emptyAlpha">Не задана значимость</string>
  <string name="graphics_loadModel">Загрузить модель</string>
  <string name="graphics_resetScene">Сбросить трансформации</string>
  <string name="graphics_projection">Угол проекции: %d&#176;</string>
  <string name="graphics_parallelFactor">Коэффициент L: %.2f</string>
  <string name="graphics_centralDistance">Расстояние до точки схода: %d</string>
  <string name="graphics_projectionType">Тип проекции</string>
  <string name="graphics_pointX">Точка схода по X</string>
  <string name="graphics_pointY">Точка схода по Y</string>
  <string name="graphics_pointZ">Точка схода по Z</string>
  <string name="graphics_drawAxis">Отображать оси координат</string>
  <string name="graphics_negativeAxis">Отображать отрицательное направление</string>
  <string name="graphics_transformType">Тип трансформации</string>
  <string name="graphics_syncTransform">Синхронизировать</string>
  <string name="graphics_translateX">Перемещение по оси X: %.1f</string>
  <string name="graphics_translateY">Перемещение по оси Y: %.1f</string>
  <string name="graphics_translateZ">Перемещение по оси Z: %.1f</string>
  <string name="graphics_scaleX">Масштабирование по оси X: %.2f</string>
  <string name="graphics_scaleY">Масштабирование по оси Y: %.2f</string>
  <string name="graphics_scaleZ">Масштабирование по оси Z: %.2f</string>
  <string name="graphics_rotateX">Вращение по оси X: %d&#176;</string>
  <string name="graphics_rotateY">Вращение по оси Y: %d&#176;</string>
  <string name="graphics_rotateZ">Вращение по оси Z: %d&#176;</string>
  <string name="startMP">МВП</string>
  <string name="mp_task1">Задание 1</string>
  <string name="mp_task2">Задание 2</string>
  <string name="mp_task3">Задание 3</string>
  <string name="mp_task4">Задание 4</string>
  <string name="mp_task5">Задание 5</string>
  <string name="startOOP">ООП</string>
  <string name="startOS">ОС</string>
  <string name="os_scheduler_RAMUnits">MiB</string>
  <string name="os_scheduler_cycleUnits">квантов</string>
  <string name="os_scheduler_processName">Имя процесса</string>
  <string name="os_scheduler_ticksCount">Тактов на выполнение</string>
  <string name="os_scheduler_resident">(резидентный)</string>
  <string name="os_scheduler_baseRAM">Статическая память</string>
  <string name="os_scheduler_maxDRAM">Макс. выделяемая память</string>
  <string name="os_scheduler_maxHDD">Интервал обращения к диску</string>
  <string name="os_scheduler_defaultIORate">(нет)</string>
  <string name="iTheory_imageSize">Размер изображения</string>
  <string name="iTheory_currentState">Состояние:</string>
  <string name="iTheory_eventLog">Журнал операций</string>
</resources>