<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

 <LinearLayout
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_centerInParent="true"
   android:orientation="vertical">

   <Button
     android:id="@+id/startMathStat"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startMath"/>

   <Button
     android:id="@+id/startNumeric"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startNumeric"/>

   <Button
     android:id="@+id/startTranslator"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startTranslator"/>

   <Button
     android:id="@+id/startGraphics"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startGraphics"/>

   <Button
     android:id="@+id/startMP"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startMP"/>

   <Button
     android:id="@+id/startOOP"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startOOP"/>

   <Button
     android:id="@+id/startOS"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/actStart_btnPadding"
     android:text="@string/startOS"/>
 </LinearLayout>

</RelativeLayout>