<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center">

  <LinearLayout
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
      android:id="@+id/task1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/actStart_btnPadding"
      android:text="@string/mp_task1"/>

    <Button
      android:id="@+id/task2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/actStart_btnPadding"
      android:text="@string/mp_task2"/>

    <Button
      android:id="@+id/task3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/actStart_btnPadding"
      android:text="@string/mp_task3"/>

    <Button
      android:id="@+id/task4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/actStart_btnPadding"
      android:text="@string/mp_task4"/>

    <Button
      android:id="@+id/task5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/actStart_btnPadding"
      android:text="@string/mp_task5"/>
  </LinearLayout>

</LinearLayout>